# fastapi-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
