[tool.poetry]
name = "fastapi-docker"
version = "0.1.0"
description = "FastAPI Docker"
authors = ["Louis Agyapong <47106199+louis-agyapong@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
redis = "^4.5.4"
debugpy = "^1.6.7"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
